Add prices edition support

--- a/client/app.scss
+++ b/client/app.scss
@@ -24,6 +24,7 @@
 /* Molecules */
 @import "scss/molecules/recipe";
 @import "scss/molecules/contextMenu";
+@import "scss/molecules/navigation";
 
 /* Organisms */
 @import "scss/organisms/header";
