--- a/client/scss/atoms/_action-bubble.scss
+++ b/client/scss/atoms/_action-bubble.scss
@@ -20,8 +20,14 @@
 
   background: #f00;
   display: flex;
+  opacity: 1;
 
   transition: all .5s ease-in-out;
+
+  &.ng-hide{
+    opacity: 0;
+    transition: all 0.5s 1s ease-in-out;
+  }
 }
 
 .action-bubble:hover:after {
