--- a/client/scss/organisms/_header.scss
+++ b/client/scss/organisms/_header.scss
@@ -12,6 +12,12 @@
 
   z-index: 999;
   padding: 0 1rem;
+
+  transition: all 0.2s ease-in-out;
+
+  &.ng-hide{
+    top: -$header-height;
+  }
 }
 
 .header__title{
