add svg icons support

--- a/client/app.scss
+++ b/client/app.scss
@@ -16,6 +16,7 @@
 @import "scss/utils/color-code";
 
 /* Atoms */
+// @import "scss/atoms/icons";
 @import "scss/atoms/action-bubble";
 @import "scss/atoms/action-layer";
 @import "scss/atoms/buttons";
