--- a/client/scss/settings/_colors.scss
+++ b/client/scss/settings/_colors.scss
@@ -1,6 +1,6 @@
-$primary-color: hsl(145, 49%, 53%);
+$primary-color: #3EA8F4;
 $secondary-color: #00558b;
-$body-background: #eee;
+$body-background: #363636;
 
 
 // displayed colors
