playing with isotope

--- a/client/app.scss
+++ b/client/app.scss
@@ -8,6 +8,7 @@
 @import "scss/libs/foundation";
 @import "scss/libs/animate";
 @import "scss/libs/xeditable";
+@import "modules/isotope/isotope";
 
 /* Utils */
 @import "scss/utils/reset";
