--- a/client/modules/deck/_deck.scss
+++ b/client/modules/deck/_deck.scss
@@ -32,7 +32,12 @@ $gutter-width: 2rem;
   @include breakpoint('large'){
     width: 33.333%;
   }
+
+  &.bigger {
+    width: 100%;
+  }
 }
+
 
 
 /**** Transitions ****/
