--- a/client/app.scss
+++ b/client/app.scss
@@ -9,6 +9,7 @@
 @import "scss/libs/animate";
 @import "scss/libs/xeditable";
 @import "modules/isotope/isotope";
+@import "famous-angular.css";
 
 /* Utils */
 @import "scss/utils/reset";
