--- a/client/app.scss
+++ b/client/app.scss
@@ -37,6 +37,7 @@
 @import "modules/card/card";
 @import "modules/sidebar/sidebar";
 @import "modules/deck/deck";
+@import "modules/floatingActionButton/floatingActionButton";
 
 /* Views */
 @import "scss/views/common";
