--- a/client/modules/deck/_deck.scss
+++ b/client/modules/deck/_deck.scss
@@ -1,9 +1,8 @@
 $gutter-width: 1rem;
-$amazingQuery-height: 4rem;
+$amazingQuery-height: 6rem;
 
 .page-wrapper__wrapper--inner {
   padding: $gutter-width / 2;
-  padding-top: $amazingQuery-height;
 }
 
 .deck {
@@ -26,19 +25,10 @@ $amazingQuery-height: 4rem;
 }
 
   .deck__card__wrapper--outer {
-    // transition: all .2s ease-in-out;
     width: 100%;
     padding: $gutter-width / 2;
-    // width: 100%;
-    // margin-bottom: $gutter-width;
     display: inline-block;
-    // @include breakpoint('medium'){
-    //   width: 50%;
-    // }
-    // @include breakpoint('large'){
-    //   width: 33.333%;
-    // }
-    // transition: width .5s ease-in-out;
+
 
     &.bigger {
       width: 100%;
@@ -53,4 +43,8 @@ $amazingQuery-height: 4rem;
     right: 2rem;
     top: 2rem;
     width: auto;
+  }
+
+  .amazingQuery__wrapper--outer {
+    height: $amazingQuery-height;
   }
