--- a/client/modules/isotope/_isotope.scss
+++ b/client/modules/isotope/_isotope.scss
@@ -1,41 +1,41 @@
 // .isotope,
 // .isotope .isotope-item {
 //   /* change duration value to whatever you like */
-//   transition-duration: 0.4s;
+//   transition-duration: 0.4s
 // }
 // .isotope {
-//   transition-property: height, width;
+//   transition-property: height, width
 // }
 // .isotope-item.ng-enter {
-//   transform: scale(0);
-//   opacity: 0;
-//   transition: all 0.4s 0.8s ease-in-out;
+//   transform: scale(0)
+//   opacity: 0
+//   transition: all 0.4s 0.8s ease-in-out
 // }
 // .isotope-item.ng-leave {
-//   transform: scale(0);
-//   opacity: 0;
-//   transition: all 0.4s 0.8s ease-in-out;
+//   transform: scale(0)
+//   opacity: 0
+//   transition: all 0.4s 0.8s ease-in-out
 // }
 // .isotope .isotope-item {
-//   transition-property: transform, opacity;
-//   animation: justAppear steps(1, end) .6s;
+//   transition-property: transform, opacity
+//   animation: justAppear steps(1, end) .6s
 // }
 //
 // /**** disabling Isotope CSS3 transitions ****/
 // .isotope.no-transition,
 // .isotope.no-transition .isotope-item,
 // .isotope .isotope-item.no-transition {
-//   transition-duration: 0s;
+//   transition-duration: 0s
 // }
 // .isotope__wrapper--outer {
-//   height: 100%;
-//   overflow: auto;
+//   height: 100%
+//   overflow: auto
 // }
 // @keyframes justAppear {
 //   from {
-//     opacity: 0;
+//     opacity: 0
 //   }
 //   to {
-//     opacity: 1;
+//     opacity: 1
 //   }
 // }
