edit selection, auto next

--- a/client/app.scss
+++ b/client/app.scss
@@ -3,6 +3,8 @@
 @import "scss/settings/colors";
 @import "scss/settings/dimensions";
 @import "scss/settings/typography";
+@import "scss/settings/selectors";
+@import "scss/settings/zindex";
 
 /* Libs */
 @import "scss/libs/foundation";
