--- a/client/scss/atoms/_buttons.scss
+++ b/client/scss/atoms/_buttons.scss
@@ -8,36 +8,42 @@
   }
 }
 
-.button--delete {
-  // position: absolute;
-  // top: 0;
-  // right: 0;
-  // background-color: transparent !important;
-  // color: transparent;
-  // font-size: 0.1px;
-  // padding: 0;
-  // width: 1.5rem;
-  // height: 1.5rem;
+.deleteButton {
+  &, &:active, &:focus, &:hover {
+    position: relative;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: transparent;
+    border: 0;
 
-  &:after, &:before {
-    position: absolute;
-    content: ' ';
-    display: block;
-    background: #fff;
-    transform: rotate(45deg);
-  }
+    &:after, &:before {
+      position: absolute;
+      content: ' ';
+      display: block;
+      background: #fff;
+      transform: rotate(45deg);
+    }
 
-  &:after {
-    top: calc(50% - 1px);
-    right: 25%;
-    width: 50%;
-    height: 2px;
-  }
+    &:after {
+      top: calc(50% - 1px);
+      right: 0;
+      width: 100%;
+      height: 2px;
+    }
 
-  &:before {
-    right: calc(50% - 1px);
-    top: 25%;
-    width: 2px;
-    height: 50%;
+    &:before {
+      left: calc(50% - 1px);
+      top: 0;
+      width: 2px;
+      height: 100%;
+    }
   }
+}
+
+.saveButton {
+  background: $success-color;
+}
+
+.discardButton {
+  background: $alert-color;
 }
