--- a/client/app.scss
+++ b/client/app.scss
@@ -9,9 +9,9 @@
 /* Libs */
 @import "scss/libs/foundation";
 @import "scss/libs/animate";
-@import "scss/libs/xeditable";
-@import "modules/isotope/isotope";
-@import "famous-angular.css";
+// @import "scss/libs/xeditable";
+// @import "modules/isotope/isotope";
+// @import "famous-angular.css";
 
 /* Utils */
 @import "scss/utils/reset";
@@ -21,20 +21,20 @@
 
 /* Atoms */
 // @import "scss/atoms/icons";
-@import "scss/atoms/action-bubble";
-@import "scss/atoms/action-layer";
-@import "scss/atoms/buttons";
-@import "scss/atoms/forms";
+// @import "scss/atoms/action-bubble";
+// @import "scss/atoms/action-layer";
+// @import "scss/atoms/buttons";
+// @import "scss/atoms/forms";<
 
 /* Molecules */
 @import "scss/molecules/recipe";
-@import "scss/molecules/contextMenu";
-@import "scss/molecules/navigation";
+// @import "scss/molecules/contextMenu";
+// @import "scss/molecules/navigation";
 
 /* Organisms */
-@import "scss/organisms/header";
-@import "scss/organisms/stack";
-@import "scss/organisms/item";
+// @import "scss/organisms/header";
+// @import "scss/organisms/stack";
+// @import "scss/organisms/item";
 
 @import "modules/card/card";
 @import "modules/sidebar/sidebar";
