gestion des stocks

--- a/client/app.scss
+++ b/client/app.scss
@@ -41,6 +41,7 @@
 @import "modules/deck/deck";
 @import "modules/editor/editor";
 @import "modules/floatingActionButton/floatingActionButton";
+@import "modules/stocks/stocks";
 
 /* Views */
 @import "scss/views/common";
