--- a/client/scss/views/_common.scss
+++ b/client/scss/views/_common.scss
@@ -9,8 +9,8 @@ html, body {
 .layout__sidebar {
   height: 100%;
   float: left;
-  width: 6rem;
-  overflow: hidden;
+  width: 8rem;
+  overflow: visible;
 }
 
 .layout__page-wrapper {
