ui enhancements on autocomplete

--- a/client/app.scss
+++ b/client/app.scss
@@ -24,7 +24,7 @@
 // @import "scss/atoms/action-bubble";
 // @import "scss/atoms/action-layer";
 // @import "scss/atoms/buttons";
-// @import "scss/atoms/forms";<
+@import "scss/atoms/forms";
 
 /* Molecules */
 @import "scss/molecules/recipe";
