--- a/client/modules/editor/_editor.scss
+++ b/client/modules/editor/_editor.scss
@@ -22,6 +22,10 @@
   @extend .card__title;
 }
 
+.ingredient__name {
+  width: 100%;
+}
+
 .editor__actionBar {
   position: absolute;
   right: 1rem;
