--- a/src/components/Collection/collection.css
+++ b/src/components/Collection/collection.css
@@ -1,5 +1,7 @@
 .collection {
-  margin-top: 2rem;
+  box-sizing: content-box;
+  margin: 1rem -1rem;
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -8,16 +10,6 @@
 }
 
 .children {
-  lost-column: 1/6 6 20px;
-  margin-bottom: 2rem;
-
-  /*@media(--small) {
-    lost-column: 1/3 3 20px;
-  }
-  @media(--medium) {
-    lost-column: 1/5 5 20px;
-  }
-  @media(--large) {
-    lost-column: 1/8 8 20px;
-  }*/
+  flex: 1 1 20rem;
+  padding: 1rem;
 }
