--- a/src/pages/Dashboard/searchable.css
+++ b/src/pages/Dashboard/searchable.css
@@ -4,7 +4,7 @@
 
 .statusBar {
   background: #000;
-  position: fixed;
+  position: relative;;
   bottom: 0;
   left: 0;
   right: 0;
@@ -14,4 +14,5 @@
   color: #fff;
 
   padding: .5rem 1rem;
+  margin-top: 2rem;
 }
