--- a/src/reset.css
+++ b/src/reset.css
@@ -7,7 +7,7 @@
 html,
 body {
   background: #eee;
-  font-family: sans-serif;
+  font-family: raleway, sans-serif;
 }
 
 html {
@@ -22,4 +22,38 @@ body {
 }
 .right {
   float: right;
+}
+input {
+  font-family: consolas, monospace;
+  background: transparent;
+  border: 0;
+  border-bottom: 2px solid currentColor;
+  color: #999999;
+  width: 100%;
+}
+button {
+  border: 0;
+  color: #000;
+  padding: .4rem 1rem;
+  cursor: pointer;
+  margin-left: .1rem;
+  background: #fff;
+  font-family: consolas, monospace;
+}
+button.positive {
+  background: #000;
+  color: #fff;
+}
+i {
+  font-style: normal;
+}
+select {
+  border-radius: 0;
+  border: 1px solid #333;
+  background: transparent;
+  color: #333;
+  appearance: none;
+  padding: .5rem 1rem;
+  margin-left: 1rem;
+  cursor: pointer;
 }
