--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -65,3 +65,30 @@
   margin-left: auto;
   cursor: pointer;
 }
+
+.favorite input[type='checkbox'] {
+  opacity: 0;
+  margin: 0;
+  width: 0;
+  height: 0;
+}
+
+.favorite .icon-eye {
+
+}
+
+.favorite input[type='checkbox'] + span svg {
+  display: inline-block;
+  height: 1.5rem;
+  user-select: none;
+  cursor: pointer;
+  fill: transparent;
+  stroke: #fff;
+  stroke-width: 4;
+  stroke-linecap: round;
+}
+
+.favorite input[type='checkbox']:checked + span svg {
+  fill: #fff;
+  stroke-width: 0;
+}
