--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,18 +1,22 @@
-.container {
-  position: relative;
-
+.card {
   transition: .2s ease-out;
   transform: 0;
 
   color: #eee;
-  background: #111;
   box-shadow: 1px 1px 2px color(#111 alpha(40%));
 }
-.container:matches(:hover,:focus,:active) {
-  transform: translateY(-2px) scale(1.01);
+.card:matches(:hover,:focus,:active) {
+  /*transform: translateY(-1px) scale(1.01);*/
+  transform: translateY(-1px);
 
   box-shadow: 4px 4px 16px color(#111 alpha(20%));
 }
+.container {
+  position: relative;
+
+  background: #111;
+}
+
 .container::before {
   display: block;
 
@@ -74,16 +78,21 @@
   justify-content: center;
 }
 .editForm input {
-  text-align: center;
   display: inline-block;
+
   width: 80%;
+
+  text-align: center;
+
   color: #fff;
+
   font-size: 2rem;
 }
 .editForm input::-webkit-inner-spin-button,
 .editForm input::-webkit-outer-spin-button {
-  -webkit-appearance: none;
   margin: 0;
+
+  -webkit-appearance: none;
 }
 .priceInfos {
   display: flex;
@@ -129,7 +138,23 @@
 }
 
 .stockStatus {
-  height: 3.2rem;
-  background: #000;
   display: flex;
+  flex-direction: row;
+
+  height: 6rem;
+
+  color: #fff;
+  background: transparent;
+}
+.stockStatus > * {
+  color: #fff;
+  background: transparent;
+  background-color: rgba(0,0,0, .2);
+
+  font-size: 2rem;
+
+  flex: 2;
+}
+.stockStatus:last-child {
+  flex: 1;
 }
