--- a/src/components/Logger/logger.css
+++ b/src/components/Logger/logger.css
@@ -1,13 +1,13 @@
 .logger {
   position: fixed;
-  right: 3rem;
-  bottom: 3rem;
-  left: 3rem;
+  right: 1rem;
+  bottom: 1rem;
+  left: 1rem;
 
-  max-width: 28rem;
+  max-width: 32rem;
 
-  border: #eee 1px solid;
-  background: #111;
+  color: #ddd;
+  /*border: #eee 1px solid;*/
   /*width: 100%;*/
   box-shadow: 4px 4px 16px color(#111 alpha(20%));
 }
@@ -21,18 +21,23 @@
 }
 
 .logs {
+  overflow: auto;
+
+  max-height: 40rem;
   margin: 0;
   padding: 0;
 
   list-style: none;
 
-  background-color: #eee;
+  color: #eee;
+  background: #444;
 }
 .log {
-  padding: .5rem 1rem;
+  padding: .5rem;
 
-  border-top: #ddd 1px solid;
-  border-bottom: #ddd 1px solid;
+  border-bottom: #555 1px solid;
+
+  font-size: 1.2rem;
 }
 
 .input {
@@ -41,13 +46,15 @@
   width: 100%;
   padding: 1rem;
 
+  transition: .2s ease-in-out;
+
   color: #eee;
   border: 0;
-  border-top: 1px solid #eee;
-  background: transparent;
+  background: #222;
 }
 .input:focus {
   outline: 0;
+  background: #333;
 }
 .submit {
   position: absolute;
