--- a/src/components/Logger/logger.css
+++ b/src/components/Logger/logger.css
@@ -1,50 +1,45 @@
 .logger {
-  position: fixed;
-  right: 1rem;
-  bottom: 1rem;
-  left: 1rem;
-
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
   max-width: 32rem;
-
   color: #ddd;
-  /*border: #eee 1px solid;*/
-  /*width: 100%;*/
-  box-shadow: 4px 4px 16px color(#111 alpha(20%));
-}
-
-@media (max-width: 400px) {
-  .logger {
-    right: .5rem;
-    bottom: .5rem;
-    left: .5rem;
-  }
 }
 
 .logs {
   overflow: auto;
-
-  max-height: 40rem;
+  flex: 1;
   margin: 0;
   padding: 0;
 
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 
   color: #eee;
   background: #444;
 }
 .log {
-  padding: .5rem;
-
-  border-bottom: #555 1px solid;
+  padding: 1rem 2rem 1rem 1rem;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-height: 3rem;
+  max-height: 6rem;
+  border-top: #3a3a3a 2px solid;
 
   font-size: 1.2rem;
 }
 
 .input {
   display: block;
+  flex: 0;
+  min-height: 4rem;
 
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 2rem;
 
   transition: .2s ease-in-out;
 
@@ -65,4 +60,11 @@
 }
 .input:valid ~ .submit {
   display: block;
+}
+.icon {
+  width: 4rem;
+  display: inline-block;
+  text-align: center;
+  margin-right: 1rem;
+  font-family: consolas, monospace;
 }
