--- a/src/components/Logger/logger.css
+++ b/src/components/Logger/logger.css
@@ -1,51 +1,61 @@
 .logger {
-  height: 100vh;
   display: flex;
   flex-direction: column;
+
   max-width: 32rem;
+  height: 100vh;
+
   color: #ddd;
 }
 
 .logs {
+  display: flex;
   overflow: auto;
-  flex: 1;
+  flex-direction: column;
+
   margin: 0;
   padding: 0;
 
   list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
 
   color: #eee;
   background: #444;
+
+  flex: 1;
+  justify-content: flex-end;
 }
 .log {
-  padding: 1rem 2rem 1rem 1rem;
-  flex: 1;
   display: flex;
   flex-direction: row;
-  align-items: center;
+
   min-height: 3rem;
   max-height: 6rem;
+  padding: 1rem 3rem 1rem 2rem;
+
   border-top: #3a3a3a 2px solid;
 
   font-size: 1.2rem;
+
+  flex: 1;
+  align-items: center;
 }
 
 .input {
   display: block;
-  flex: 0;
-  min-height: 4rem;
 
   width: 100%;
-  padding: 1rem 2rem;
+  min-height: 5rem;
+  padding: 1.5rem 3rem;
 
   transition: .2s ease-in-out;
 
   color: #eee;
   border: 0;
   background: #222;
+
+  line-height: 160% ;
+
+  flex: 0;
 }
 .input:focus {
   outline: 0;
@@ -62,9 +72,12 @@
   display: block;
 }
 .icon {
-  width: 4rem;
   display: inline-block;
-  text-align: center;
+
+  width: 4rem;
   margin-right: 1rem;
+
+  text-align: center;
+
   font-family: consolas, monospace;
 }
