--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -98,6 +98,7 @@
 }
 .favorite {
   height: 1.5rem;
+  width: 1.5rem;
   margin-left: auto;
 
   cursor: pointer;
@@ -119,6 +120,7 @@
   display: inline-block;
 
   height: 1.5rem;
+  width: 1.5rem;
 
   cursor: pointer;
   user-select: none;
