--- a/src/components/Logger/logger.css
+++ b/src/components/Logger/logger.css
@@ -30,10 +30,7 @@
 
   min-height: 3rem;
   max-height: 6rem;
-  padding: 1rem 3rem 1rem 2rem;
-
-  border-top: #3a3a3a 2px solid;
-
+  padding: 1rem 3rem 1rem .5rem;
   font-size: 1.2rem;
 
   flex: 1;
@@ -72,12 +69,36 @@
   display: block;
 }
 .icon {
+  position: relative;
   display: inline-block;
-
-  width: 4rem;
-  margin-right: 1rem;
-
-  text-align: center;
-
+  font-weight: bold;
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0 2rem;
+  color: #444;
+  display: flex;
+  flex: 0 0 2.5rem;
+  align-items: center;
+  justify-content: center;
   font-family: consolas, monospace;
+}
+.icon > span:not(.quantity), .icon svg {
+  fill: #444;
+  width: 100%;
+  line-height: 0;
+  padding: .25rem;
+}
+.icon .quantity {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: .25rem;
+  min-width: 1.5rem;
+  height: 1.5rem;
+  line-height: 1rem;
+  font-size: 1rem;
+  transform: translate(50%, 50%);
+  background: #fff;
+  border-radius: 50%;
 }
