--- a/src/index.jade
+++ b/src/index.jade
@@ -1,8 +1,8 @@
 doctype html
-html(lang="en")
+html(lang="fr")
   head
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    title Cycle Starter
+    title The dofusian Craftsman's Companion
   body
     .app
     script(src="/app.js")
